--- a/index.html
+++ b/index.html
@@ -4,116 +4,137 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu Cafe</title>
     <link rel="stylesheet" href="style.css">
-    <title>Grid Template</title>
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+
+
 </head>
-<body>
-    <h2 class="title">Grid-template</h2>
-    <!-- <p>Define rows & columns</p>
-    <ul>
-        <li><strong>Grid-template-columns:</strong> 100px 100px 100px 100px</li>
-        <li><strong>Grid-template-rows:</strong> 100px 100px 100px</li>
-        <li><strong>Grid-template (rows /cols):</strong> 100px 100px 100px / 100px 100px 100px 100px</li>
-    </ul> -->
-    <div class="grid-container">
-        <div class="grid-item box-1">Box one</div>
-        <div class="grid-item box-2">Box two</div>
-        <div class="grid-item box-3">Box three</div>
-        <div class="grid-item box-4">Box four</div>
-        <div class="grid-item box-5">Box five</div>
-        <div class="grid-item box-6">Box six</div>
+<body id="body">
+    <div class="hero" id="hero-dark">
+        <span><i class='bx bxs-circle-half' id="change-theme"></i></span>
+        <h1 id="h1">menu</h1>
+        
+        <div class="main-grid">
+            <div class="beverage coffee" >
+                <i class='icon bx bxs-coffee-alt'><span>Ca phe</span></i>
+                <div class="list coffee-list">
+                    <ul>
+                        <li class="coffee-item">Cappuccino</li>
+                        <li class="coffee-item">Latte</li>
+                        <li class="coffee-item">Macchiato</li>
+                        <li class="coffee-item">Ca phe den</li>
+                        <li class="coffee-item">Ca phe sua</li>
+                        <li class="coffee-item">Bac siu</li>
+                    </ul>
+                </div>
+                <div class="price coffee-price">
+                    <ul>
+                        <li class="coffee-price">25k</li>
+                        <li class="coffee-price">25k</li>
+                        <li class="coffee-price">25k</li>
+                        <li class="coffee-price">25k</li>
+                        <li class="coffee-price">25k</li>
+                        <li class="coffee-price">25k</li>
+                    </ul>
+                </div>
+                <span class="open-modal" id="open-coffee-modal">+</span>
+            </div>
+            <div class="beverage tea">
+                <i class='icon bx bxs-coffee'><span>Tra</span></i>
+                <div class="list tea-list">
+                    <ul>
+                        <li class="item tea-item">Tra xanh</li>
+                        <li class="item tea-item">Tra dao</li>
+                        <li class="item tea-item">Tra den</li>
+                        <li class="item tea-item">Tra gung</li>
+                        <li class="tea-item">Tra olong</li>
+                        <li class="tea-item">Hong tra</li>
+                    </ul>
+                </div>
+                <div class="price tea-price">
+                    <ul>
+                        <li class="price tea-price">25k</li>
+                        <li class="price tea-price">25k</li>
+                        <li class="price tea-price">25k</li>
+                        <li class="price tea-price">25k</li>
+                        <li class="price tea-price">25k</li>
+                        <li class="price tea-price">25k</li>
+                    </ul>
+                </div>
+                <span class="open-modal">+</span>
+            </div>
+            <div class="beverage special-drinks">
+                <i class='icon bx bxs-drink'><span>Nuoc uong khac</span></i>
+                <div class="list special-list">
+                    <ul>
+                        <li class="price special-item">Sua chua</li>
+                        <li class="price special-item">Nuoc me</li>
+                        <li class="price special-item">Nuoc ep</li>
+                        <li class="price special-item">Nuoc cam</li>
+                        <li class="price special-item">Ca cao</li>
+                        <li class="price special-item">Tra sua</li>
+                    </ul>
+                </div>
+                <div class="price special-price">
+                    <ul>
+                        <li class="price special-price">25k</li>
+                        <li class="price special-price">25k</li>
+                        <li class="price special-price">25k</li>
+                        <li class="price special-price">25k</li>
+                        <li class="price special-price">25k</li>
+                        <li class="price special-price">25k</li>
+                    </ul>
+                </div>
+                <span class="open-modal">+</span>
+            </div>
+            <i id="alley" class='bx bx-coffee'>
+                <span>
+                    <p>57 Le Thai To</p>
+                    <h2>The Alley 57</h2>            
+                </span>
+            </i>
+        </div>
     </div>
-    <h2 class="title">Grid-column(row)-start(end)</h2>
-    <!-- <p>Place items on grid</p>
-    <ul>
-        <li><strong>Grid-column-start:</strong> 1</li>
-        <li><strong>Grid-column-end:</strong> 2</li>
-        <li><strong>Grid-row-start:</strong> 1</li>
-        <li><strong>Grid-row-end:</strong> 2</li>
-    </ul> -->
-    <div class="grid-container">
-        <div class="grid-item box-7">Box one</div>
-        <div class="grid-item box-8">Box two</div>
-        <div class="grid-item box-9">Box three</div>
-        <div class="grid-item box-10">Box four</div>
-        <div class="grid-item box-11">Box five</div>
-        <div class="grid-item box-12">Box six</div>
+
+    <!-- modal -->
+
+    <div class="modal-container" id="modal-container" style="display: none;">
+        <div class="modal-grid">
+            <div class="modal-item item-1">
+                <span><img src="images/icons8-cappuccino-100.png" alt="" class="modal-image"></span>
+                Cappuccino
+                <span class="modal-price">25k</span>
+            </div>
+            <div class="modal-item item-2">
+                <span><img src="images/icons8-latte-100.png" alt="" class="modal-image"></span>
+                Latte
+                <span class="modal-price">25k</div>
+            <div class="modal-item item-3">
+                <span><img src="images/icons8-latte-100-2.png" alt="" class="modal-image"></span>
+                Macchiato
+                <span class="modal-price">25k </div>
+            <div class="modal-item item-4">
+                <span><img src="images/icons8-barista-64.png" alt="" class="modal-image"></span>
+                Ca phe den
+                <span class="modal-price">25k</div>
+            <div class="modal-item item-5">
+                <span><img src="images/icons8-coffee-100.png" alt="" class="modal-image"></span>
+                ca phe sua
+                <span class="modal-price">25k</div>
+            <div class="modal-item item-6">
+                <span><img src="images/icons8-latte-macchiato-64.png" alt="" class="modal-image"></span>
+                Bac siu
+                <span class="modal-price">25k</div>
+        </div>
+        <span class="close-modal" id="close-coffee-modal">x</span>
     </div>
-    <!-- <h2 class="title">Grid-column(row): start / end</h2>
-    <p>Short-hand</p>
-    <ul>
-        <li><strong>Grid-column:</strong> 1 / 2</li>
-        <li><strong>Grid-row:</strong> 1 / 2</li>
-    </ul> -->
-    <div class="grid-container">
-        <div class="grid-item box-13">Box five</div>
-        <div class="grid-item box-14">Box six</div>
-    </div>
-    <h2 class="title">Grid-column(row): negative</h2>
-    <div class="grid-container">
-        <div class="grid-item box-15">Box five</div>
-        <div class="grid-item box-16">Box six</div>
-    </div>
-    <h2 class="title">Grid-column(row): start / span(number)</h2>
-    <div class="grid-container">
-        <div class="grid-item box-17">Box three</div>
-        <div class="grid-item box-18">Box four</div>
-        <div class="grid-item box-19">Box two</div>
-        <div class="grid-item box-20">Box five</div>
-    </div>
-    <h2 class="title">Auto-grid: justify-content, aligns-items</h2>
-    <div class="grid-container-2">
-        <div class="grid-item box-21">Box three (start)</div>
-        <div class="grid-item box-22 large">Box four (large)</div>
-        <div class="grid-item box-23 large">Box five (large)</div>
-        <div class="grid-item box-24">Box six (end)</div>
-    </div>
-    <h2 class="title">Justify-items</h2>
-    <div class="grid-container-3">
-        <div class="grid-item box-25">Box three</div>
-        <div class="grid-item box-26">Box four</div>
-        <div class="grid-item box-27">Box two</div>
-        <div class="grid-item box-28">Box five</div>
-    </div>
-    <h2 class="title">Grid with padding</h2>
-    <div class="grid-container-4">
-        <div class="grid-item box-29">Box one</div>
-        <div class="grid-item box-30">Box two</div>
-        <div class="grid-item box-31">Box three</div>
-        <div class="grid-item box-32">Box four</div>
-        <div class="grid-item box-33">Box five</div>
-        <div class="grid-item box-34">Box six</div>
-    </div>
-    <h2 class="title">Grid gaps</h2>
-    <div class="grid-container-5">
-        <div class="grid-item box-35">Box one</div>
-        <div class="grid-item box-36">Box two</div>
-        <div class="grid-item box-37">Box three</div>
-        <div class="grid-item box-38">Box four</div>
-        <div class="grid-item box-39">Box five</div>
-        <div class="grid-item box-40">Box six</div>
-    </div>
-    <h2 class="title">Grid areas</h2>
-    <div class="grid-container-6">
-        <div class="grid-item box-41 header">Box one (header)</div>
-        <div class="grid-item box-42 sidebar">Box two (sidebar)</div>
-        <div class="grid-item box-43 content">Box three (content)</div>
-        <!-- <div class="grid-item box-44">Box four</div> -->
-        <div class="grid-item box-45 footer">Box five (footer)</div>
-    </div>
-    <h2 class="title">Grid areas with empty space</h2>
-    <div class="grid-container-7">
-        <div class="grid-item box-46 header">Box one (header)</div>
-        <div class="grid-item box-47 sidebar">Box two (sidebar)</div>
-        <div class="grid-item box-48 content">Box three (content)</div>
-        <div class="grid-item box-49 footer">Box five (footer)</div>
-    </div>
-    <h2 class="title">minmax(min, max)</h2>
-    <div class="grid-container-8">
-        <div class="grid-item box-50 header">Box one (header)</div>
-        <div class="grid-item box-51 sidebar">Box two (sidebar)</div>
-        <div class="grid-item box-52 content">Box three (content)</div>
-        <div class="grid-item box-53 footer">Box five (footer)</div>
-    </div>
+
+    <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
+    <script src="index.js"></script>
+
 </body>
-</html> 
+</html>
