--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body id="body">
-    <div class="hero" id="hero-dark">
+    <div class="hero" id="hero-hide">
         <span><i class='bx bxs-circle-half' id="change-theme"></i></span>
         <h1 id="h1">menu</h1>
         
