--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             </div>
             <i id="alley" class='bx bx-coffee'>
                 <span>
-                    <p>57 Le Thai To</p>
-                    <h2>The Alley 57</h2>            
+                    <p>88 To Hien Thanh</p>
+                    <h2>The Alley 078</h2>            
                 </span>
             </i>
         </div>
